--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.3
   http: ^0.13.3
+  provider: ^4.3.3
 
 dev_dependencies:
   flutter_test:
