--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   cupertino_icons: ^1.0.3
   http: ^0.13.3
   provider: ^4.3.3
+  equatable: ^1.2.6
 
 dev_dependencies:
   flutter_test:
